--- a/Project-2/styles.css
+++ b/Project-2/styles.css
@@ -41,3 +41,71 @@ nav i {
     border-radius: 50%;
     font-weight: 600;
 }
+
+#center {
+    padding: 40px 80px;
+    width: 100%;
+}
+
+#center h1 {
+    font-size: 80px;
+    font-weight: 500;
+    line-height: 90px;
+
+}
+
+#center-in {
+    height: 200px;
+    width: 100%;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#center-in p {
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 30px;
+}
+
+#right {
+    width: 20%;
+}
+
+.element {
+    padding: 20px 5px;
+    border-top: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.element i {
+    font-size: 25px;
+    font-weight: 500;
+    opacity: 0;
+}
+
+.element a {
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.element:hover i {
+    opacity: 1;
+}
+
+.element:hover a {
+    text-decoration: underline;
+}
+
+#bottom {
+    height: 40%;
+    width: 100%;
+    background: url(https://media.istockphoto.com/id/544445328/photo/outdoor-portrait-of-man-leaning-against-wooden-building.jpg?s=1024x1024&w=is&k=20&c=06Ji2Bmx0pk4Px6i-ndJgSvbmdB4IKRV-flijOkQgKw=);
+    background-size: cover;
+    background-position: 0 45%;
+}
