--- a/Project-2/styles.css
+++ b/Project-2/styles.css
@@ -48,9 +48,9 @@ nav i {
 }
 
 #center h1 {
-    font-size: 80px;
+    font-size: 4.2vw;
     font-weight: 500;
-    line-height: 90px;
+    line-height: 4.4vw;
 
 }
 
@@ -64,9 +64,9 @@ nav i {
 }
 
 #center-in p {
-    font-size: 22px;
+    font-size: 1.15vw;
     font-weight: 600;
-    line-height: 30px;
+    line-height: 2vw;
 }
 
 #right {
@@ -108,4 +108,82 @@ nav i {
     background: url(https://media.istockphoto.com/id/544445328/photo/outdoor-portrait-of-man-leaning-against-wooden-building.jpg?s=1024x1024&w=is&k=20&c=06Ji2Bmx0pk4Px6i-ndJgSvbmdB4IKRV-flijOkQgKw=);
     background-size: cover;
     background-position: 0 45%;
+}
+
+@media (max-width:600px) {
+    nav {
+
+        height: 60px;
+        padding: 0 20px;
+        gap: 20px;
+    }
+
+    nav h4 {
+        font-size: 15px;
+    }
+
+    nav i {
+        font-size: 14px;
+        padding: 6px;
+    }
+
+    #center {
+        padding: 20px 20px;
+
+    }
+
+    #center h1 {
+        font-size: 10.5vw;
+        line-height: 13vw;
+
+    }
+
+    #center-in {
+        height: 250px;
+        margin-top: 1.5rem;
+        display: flex;
+        gap: 20px;
+        flex-direction: column;
+        justify-content: space-between;
+
+    }
+
+    #center-in p {
+        font-size: 4.3vw;
+        font-weight: 600;
+        line-height: 6.5vw;
+    }
+
+    #right {
+        width: 100%;
+    }
+
+    .element {
+        padding: 10px 5px;
+        border-top: 1.5px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .element i {
+        color: #303030;
+        font-size: 18px;
+        opacity: 1;
+    }
+
+    .element a {
+        color: #303030;
+    }
+
+    #bottom {
+        margin: auto;
+        height: 60%;
+        width: 95%;
+        background: url(https://media.istockphoto.com/id/544445328/photo/outdoor-portrait-of-man-leaning-against-wooden-building.jpg?s=1024x1024&w=is&k=20&c=06Ji2Bmx0pk4Px6i-ndJgSvbmdB4IKRV-flijOkQgKw=);
+        background-size: cover;
+        background-position: 60% 10%;
+        border-radius: 2%;
+    }
+
 }
