--- a/Project-4/styles.css
+++ b/Project-4/styles.css
@@ -17,7 +17,7 @@ html {
 }
 
 #upper-nav {
-    height: 6vw;
+    height: 5vw;
     width: 100%;
     display: flex;
     align-items: center;
@@ -55,4 +55,81 @@ html {
 #upper-nav-part2 h4 span {
     color: grey;
     margin: 1vw;
+}
+
+#lower-nav {
+    width: 100%;
+    height: 5vw;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 3vw;
+    padding: 0 2vw;
+}
+
+#lower-nav h3 {
+    font-size: 1.3vw;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+#content {
+    height: calc(100% - 10vw);
+    width: 100%;
+    background-color: aquamarine;
+}
+
+#text-content {
+    height: 40%;
+    width: 100%;
+    background-color: #fff;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
+
+#text-content::-webkit-scrollbar {
+    background-color: transparent;
+    height: 0.3vw;
+
+}
+
+#text-content::-webkit-scrollbar-thumb {
+    background-color: orangered;
+
+}
+
+.element {
+    flex-shrink: 0;
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.element h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 7vw;
+    font-weight: 300;
+}
+
+#image-content {
+    height: 60%;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
+
+#image-content::-webkit-scrollbar {
+    display: none;
+}
+
+#image-content img {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
